﻿xx.xx.2012 - V2.1.5
-------------------
* Erweitertes Kontextmenü bei Planeten- und Systemlinks
  - System in OD öffnen
  - Orbit in OD öffnen
  - Schiffe hierher schicken
* Parser Einstellungen: Handel NAP wird mitgeparst
* BBS und Kolos werden über den System-Scan eingetragen



06.05.2012 - V2.1.4
-------------------
* ODDB Tool für Chrome offiziell eingebunden
* Erweiterte Einstellungen des Autoparsers im ODDB Tool
* "Schiffe hierher schicken"-Link im FoW
* Suchfilter für Bergbauschiffe und Terraformer kombiniert, Option "eins von beiden"
* Funktion "Bergbau / Terraformer löschen" im FoW
* Bugfix: Galaxiestatistik wird beim DB-Abgleich aktualisiert
* Unterstützung von PHP5.4



06.04.2012 - V2.1.3
-------------------
* Erkennung von Bergbauschiffen (Flottenübersicht, Orbit)
* Erkennung von Terraformern (Planetenübersicht, Orbit)
* Suchfilter "Bergbau" und "Terraformer"
* In der Allianzübersicht wird angezeigt, welche Allianzen Lux-Allianzen sind
* Die Flottenübersicht kann nun alle 2 Minuten eingescannt werden


22.03.2012 - V2.1.2
-------------------
* Suchfilter "Lux ohne NPC"
* Bugfixes bei der Inhaberverschleierung
* Bugfixes bei der Erkennung von gelöschten Spielern
* ODDB Tool 1.1.2



12.03.2012 - V2.1.1
-------------------
* Änderungen am Parser
  - Erkennung des Inhabers von verschleierten Planeten beim Scan
  - der DB-Parser lädt nun nicht mehr alle Grafiken im Quelltext
* Änderungen am FoW
  - bessere Hervorhebung verschleierter Planeten
  - neuer benutzerdefinierter FoW-Filter für Lux- und Altrassenplaneten
* ODDB Tool V1.1.1b
  - aktuelles System reservieren im FoW
  - erster Test der Unterstützung von Firefox Mobile (ungetestet!)
  - parst nun nicht mehr auf pre.omega-day.com
* Bugfix beim Einstellen des Werftbedarfs



04.03.2012 - V2.1 [R9]
----------------------
* Anpassungen an Omega-Day Runde 9
  - Planeten mit verschleierten Inhabern
  - neue Planeten eingetragen
  - Status HAK in NAP umbenannt
